# batrust

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  QWEN.md  README.md  TESTING.md  prd.md  test.ps1
.beads/: issues.jsonl
.claude/skills/cargo-startup-validation/: SKILL.md
benches/: battery_benchmark.rs
fonts/: DejaVuSansMono.txt
src/: config.rs  lib.rs  main.rs
src/hidpp/: battery.rs  device.rs  mod.rs
src/tray/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: application_test.rs  battery_cache_real_device_tests.rs  battery_cache_tests.rs  battery_parsing_tests.rs  battery_validation_tests.rs  config_tests.rs  device_integration_tests.rs  e2e_tests.rs  event_filtering_tests.rs  feature_index_filtering_tests.rs  main_behavior_test.rs  tray_visual_tests.rs
