 [package]
 name = "traybattery"
version = "0.1.0"
edition = "2021"

[dependencies]
hidapi = "2.6"
tokio = { version = "1", features = ["rt", "time", "macros"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = "0.17"
image = "0.25"
imageproc = "0.25"
rusttype = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
